# okome

./: README.md  pyproject.toml  setup.cfg
examples/: pyproject.toml  simple.py
okome/: __init__.py
tests/: test_simple.py
